# SPDX-License-Identifier: Apache-2.0
[package]
name         = "kx-catalog"
version      = "0.1.1"
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "kortecx snapshot registry + sharable catalog (M7, D82/D83): the TaskSignature verdict-reuse foundation (M7.0) + a content-addressed, idempotent, immutable signature registry (M7.1). A SEPARATE TRUTH — authoritative for WHAT recipes exist; the journal stays authoritative for what runs DID. Off-journal and off the identity path: it composes kx-mote/kx-workflow/kx-content identities and never bumps MoteDef. SN-8: discovery/stats never gate selection; reuse is exact crypto-equality only."

[lib]
path = "src/lib.rs"

[dependencies]
# Identity primitives COMPOSED into TaskSignature / SignatureEntry / VerdictScope:
# MoteDefHash (the pinned critic + skill hashes) and MoteId (the citee).
kx-mote     = { workspace = true }
# ManifestId — the recipe-as-product identity a SignatureEntry pins.
kx-workflow = { workspace = true }
# DatasetId — the optional pinned corpus on a RecipeSnapshot. M7.3 also consumes
# its RetrievalIndex/Hit similarity seam (SN-8-confined fuzzy discovery, D87).
kx-dataset  = { workspace = true }
# ContentRef — the content-addressed identity of an M7.3 SelectionFact (the
# exact-out artifact of fuzzy-in/exact-out discovery, D87). A foundational
# primitive (already transitive via kx-dataset); strictly BELOW the SN-8 wall
# (kx-content cannot depend on kx-catalog), so the dependency direction holds.
kx-content  = { workspace = true }
# M7.3 (D85): reuse the M5.3 closed, no-float typed-arg schema (InputSchema /
# ParamType / validate_args) for the Mote-as-MCP tool descriptor — the SAME schema
# M8's inbound path will pass to validate_args. NOT a guarantee-path edge
# (kx-tool-registry does not depend on kx-catalog → no cycle), so the SN-8 wall
# holds; the MCP JSON-RPC wire is M8's inbound server (we do NOT pull kx-mcp).
kx-tool-registry = { workspace = true }
# Role / WarrantSpec / intersect / NarrowingError (M7.2, D86): a grant's runtime
# scope REUSES the frozen monotonic-narrowing seam verbatim — the catalog never
# re-implements narrowing and never modifies kx-warrant. This is a dependency ON
# kx-warrant, NOT a dependency BY the guarantee path, so the SN-8 wall is intact
# (no guarantee-path crate depends on kx-catalog; asserted by the m7_2 exit-gate).
kx-warrant  = { workspace = true }
# The frozen canonical content-addressed encoding (bincode v2, LE + fixed-int —
# byte-identical to kx_mote::canonical_config; replicated to keep the hash
# discipline self-contained, mirroring kx-critic-types).
bincode     = { workspace = true }
# task_signature_hash + content-addressing.
blake3      = { workspace = true }
# Stack-inline pinned-skill vec without per-entry heap churn at scale.
smallvec    = { workspace = true }
# serde derives across all public types (persistence-friendly, sharable bundles).
serde       = { workspace = true }
# Typed CatalogError.
thiserror   = { workspace = true }
# Registration observability (debug-level only; never on the truth path).
tracing     = { workspace = true }
# G1 (D94) — durable SQLite backends for the registry/grant/version/body ledgers
# (the same `bundled` static SQLite kx-journal uses). The catalog is OFF the
# guarantee path, so adding rusqlite here adds no spine→catalog edge (the wall
# holds). Always compiled (no feature flag) ⇒ `cargo test --workspace` covers it.
rusqlite    = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
# Durability tests: write → drop handle → reopen a temp-file-backed ledger.
tempfile = { workspace = true }
# Atomicity-under-panic + schema-mismatch tests forge/corrupt rows via a raw
# connection (integration tests don't inherit the lib's normal deps).
rusqlite = { workspace = true }

[lints]
workspace = true
