# SPDX-License-Identifier: Apache-2.0
[package]
name         = "kx-cli"
version      = "0.1.1"
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "kortecx unified `kx` CLI (R3, D130): a hand-rolled (no-clap) front end that forwards run|replay|digest to the kx-runtime engine and serve to the kx-gateway server, and is a gRPC client of the FROZEN KxGateway service for invoke|submit|projection|content|events|signatures. Adds --wait (run-to-result) + --json so an agent can call the runtime like a function. FFI-free by default."

[lib]
path = "src/lib.rs"

[[bin]]
name = "kx"
path = "src/main.rs"

[dependencies]
# run|replay|digest forward to the engine VERBATIM (digest invariant). FFI-free by default.
kx-runtime = { workspace = true }
# `serve` forwards to kx_gateway::serve; `submit --demo` uses kx_gateway::demo_submit_run_request.
# Default features ON ⇒ the embedded-worker closure; FFI-free (the dep_wall pins it).
kx-gateway = { workspace = true }
# The FROZEN KxGateway client stubs + request/response messages.
kx-proto   = { workspace = true }
# gRPC transport + Request/Status/Code for the client verbs. `tls` lets the client
# dial an `https://` gateway (A1); `tls-native-roots` trusts the OS trust store for
# a public CA (Apache/MIT — `tls-webpki-roots` is MPL-2.0, which deny.toml forbids).
# A custom/self-signed CA comes from `--tls-ca`. Reuses the rustls 0.23 + ring
# already in the lock (via ureq) — no new crypto provider.
tonic        = { workspace = true, features = ["tls", "tls-native-roots"] }
# A2: the `grpc.health.v1.Health` client for `kx health` (the liveness probe the
# compose healthcheck uses — a purpose-built endpoint, not a side-effectful RPC).
tonic-health = { workspace = true }
# `time` for the --wait / --follow poll backoff; `signal` for a clean --follow Ctrl-C.
tokio        = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal"] }
# --json machine output (a workspace dep; no new dependency).
serde_json   = { workspace = true }
# `kx blueprint run --file` deserializes the author-side DAG JSON (serde + derive;
# already in the lock via serde_json — an edge, not a new node).
serde        = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }

[features]
# AL1: build `kx serve` with live in-process model dispatch — forwards to the
# kx-gateway `inference` feature (which pulls the llama.cpp FFI via kx-inference).
# OFF by default so the default `kx` build stays FFI-free (the `build-no-inference`
# gate + the dep-wall). Opt in with `cargo build -p kx-cli --features inference`.
inference = ["kx-gateway/inference"]
# T3.7: build `kx serve` with the Datasets data-plane (RAG) — forwards to the
# kx-gateway `hnsw` feature. FFI-FREE (pure-Rust kx-dataset-hnsw + rusqlite; no
# llama.cpp), so the `build-no-inference` gate + the dep-wall stay green. Opt in with
# `cargo build -p kx-cli --features hnsw` (the client-vector path needs no model).
hnsw = ["kx-gateway/hnsw"]
# D139: build `kx serve` with the EMBEDDED WEB CONSOLE — forwards to the kx-gateway
# `console` feature (compile-time embed of the built `ui/dist`; needs a repo
# checkout with the dist built — `just console-dist` — or use the prebuilt release
# binary, which ships `console,hnsw`). FFI-free (hyper stack only); the default
# build stays node-free and byte-identical.
console = ["kx-gateway/console"]

[dev-dependencies]
# E2E: host an in-process gateway (kx_gateway::start) + drive CLIENT verbs as subprocesses.
kx-gateway = { workspace = true }
tempfile   = { workspace = true }
# `net` for the E2E readiness probe (wait until the in-process gateway's port
# accepts before driving the CLI — the serve task may bind just after `start`).
# `process`/`io-util` for the R5 `events --follow` E2E (spawn the long-running
# follow subprocess + read its stdout line-by-line, then kill it).
tokio      = { workspace = true, features = ["rt-multi-thread", "macros", "time", "net", "process", "io-util"] }
# Parse the verbs' --json output back in the E2E assertions (separate test crate
# ⇒ a dev-dep even though it's a normal dep of the lib).
serde_json = { workspace = true }

[lints]
workspace = true
