# SPDX-License-Identifier: Apache-2.0
[package]
name         = "kx-cli"
version      = "0.1.1"
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "kortecx unified `kx` CLI (R3, D130): a hand-rolled (no-clap) front end that forwards run|replay|digest to the kx-runtime engine and serve to the kx-gateway server, and is a gRPC client of the FROZEN KxGateway service for invoke|submit|projection|content|events|signatures. Adds --wait (run-to-result) + --json so an agent can call the runtime like a function. FFI-free by default."

[lib]
path = "src/lib.rs"

[[bin]]
name = "kx"
path = "src/main.rs"

[dependencies]
# run|replay|digest forward to the engine VERBATIM (digest invariant). FFI-free by default.
kx-runtime = { workspace = true }
# `serve` forwards to kx_gateway::serve. Default features ON ⇒ the embedded-worker
# closure; FFI-free (the dep_wall pins it).
kx-gateway = { workspace = true }
# The FROZEN KxGateway client stubs + request/response messages.
kx-proto   = { workspace = true }
# gemma3 connector-tool-fire: `extract_answer` unwraps the Ollama union `{"answer":…}`
# settle arm for display (pure FFI-free leaf; byte-identical no-op for prose answers).
kx-toolcall = { workspace = true }
# G2: the author-side blueprint shape (DagSpec/StepSpec/EdgeSpec) + the ONE canonical
# lowering to a SubmitWorkflowRequest, extracted so `chain`/`app` and the gateway host
# share the identical path (a pure FFI-free leaf: kx-proto + serde).
kx-blueprint = { workspace = true }
# POC-4: the App envelope type (kortecx.app/v1) — author / validate / canonicalize
# an envelope for `kx app new|save|run` (a pure leaf, serde/serde_json/thiserror).
kx-app     = { workspace = true }
# RC-SW1: the kortecx.skill/v1 manifest + pack loader — `kx skills add --dir`
# validates a pack LOCALLY (the same checks the server re-runs) and `kx new
# skill` pins its template against the same validator (a pure leaf).
kx-skill   = { workspace = true }
# T-AGENT2: decode a committed `CriticVerdict` (the judge recipe's terminal) to a
# readable VALID/INVALID summary for `kx invoke`/`kx mote show` (tiny FFI-free leaf).
kx-critic-types = { workspace = true }
# RC1 (D172): the FFI-free eval harness — `kx eval run` scores the embedded golden
# corpus against the committed baseline LOCALLY (no gateway). A pure leaf.
kx-eval    = { workspace = true }
# gRPC transport + Request/Status/Code for the client verbs. `tls` lets the client
# dial an `https://` gateway (A1); `tls-native-roots` trusts the OS trust store for
# a public CA (Apache/MIT — `tls-webpki-roots` is MPL-2.0, which deny.toml forbids).
# A custom/self-signed CA comes from `--tls-ca`. Reuses the rustls 0.23 + ring
# already in the lock (via ureq) — no new crypto provider.
tonic        = { workspace = true, features = ["tls", "tls-native-roots"] }
# A2: the `grpc.health.v1.Health` client for `kx health` (the liveness probe the
# compose healthcheck uses — a purpose-built endpoint, not a side-effectful RPC).
tonic-health = { workspace = true }
# `time` for the --wait / --follow poll backoff; `signal` for a clean --follow Ctrl-C.
tokio        = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal"] }
# --json machine output (a workspace dep; no new dependency).
serde_json   = { workspace = true }
# `kx blueprint run --file` deserializes the author-side DAG JSON (serde + derive;
# already in the lock via serde_json — an edge, not a new node).
serde        = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }

[features]
# serve-engine: build `kx serve` with the FFI-FREE live model loop (the shaper/
# re-plan/critic/ReAct loop + an auto-detected Ollama backend). Forwards to the
# kx-gateway `serve-engine` feature; pulls NO llama.cpp, so a `--features serve-engine`
# build needs no C++ toolchain (the `build-no-inference`-class gate + the dep-wall stay
# green). This is what the toolchain-free install ships to serve via Ollama.
serve-engine = ["kx-gateway/serve-engine"]
# AL1: build `kx serve` with the in-process llama.cpp backend too — forwards to the
# kx-gateway `inference` feature (which adds the C++ FFI via kx-inference/llamacpp on
# top of serve-engine). Opt in with `cargo build -p kx-cli --features inference`.
inference = ["kx-gateway/inference"]
# T3.7: build `kx serve` with the Datasets data-plane (RAG) — forwards to the
# kx-gateway `hnsw` feature. FFI-FREE (pure-Rust kx-dataset-hnsw + rusqlite; no
# llama.cpp), so the `build-no-inference` gate + the dep-wall stay green. Opt in with
# `cargo build -p kx-cli --features hnsw` (the client-vector path needs no model).
hnsw = ["kx-gateway/hnsw"]
# D139: build `kx serve` with the EMBEDDED WEB CONSOLE — forwards to the kx-gateway
# `console` feature (compile-time embed of the built `ui/dist`; needs a repo
# checkout with the dist built — `just console-dist` — or use the prebuilt release
# binary, which ships `console,hnsw`). FFI-free (hyper stack only); the default
# build stays node-free and byte-identical.
console = ["kx-gateway/console"]

[dev-dependencies]
# E2E: host an in-process gateway (kx_gateway::start) + drive CLIENT verbs as subprocesses.
kx-gateway = { workspace = true }
tempfile   = { workspace = true }
# `net` for the E2E readiness probe (wait until the in-process gateway's port
# accepts before driving the CLI — the serve task may bind just after `start`).
# `process`/`io-util` for the R5 `events --follow` E2E (spawn the long-running
# follow subprocess + read its stdout line-by-line, then kill it).
tokio      = { workspace = true, features = ["rt-multi-thread", "macros", "time", "net", "process", "io-util"] }
# Parse the verbs' --json output back in the E2E assertions (separate test crate
# ⇒ a dev-dep even though it's a normal dep of the lib).
serde_json = { workspace = true }

[lints]
workspace = true
