[package]
name         = "kx-content"
version      = "0.1.0"
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "kortecx content store — content-addressed payload storage behind a backend-agnostic trait."

[lib]
path = "src/lib.rs"

[dependencies]
blake3    = { workspace = true }
bytes     = { workspace = true }
kx-mote   = { workspace = true }
serde     = { workspace = true }
tempfile  = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rkyv               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
proptest           = { workspace = true }

[lints]
workspace = true
