[package]
name = "kx-coordinator"
version = "0.0.1"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "kortecx P2.2 coordinator service — hosts the P1 scheduler verbatim, owns the worker registry (behind a trait), and is the sole journal writer per run. Implements the kx-proto gRPC Coordinator service (the distribution control plane)."

[lib]
path = "src/lib.rs"

[dependencies]
# The gRPC schema + generated server/client + the tested proto<->domain
# conversions (identity re-derived Rust-side, D53).
kx-proto = { workspace = true }
# Hosted VERBATIM (P2 thesis test): registration routes through Scheduler::submit;
# placement is the kx-scheduler trait.
kx-scheduler = { workspace = true }
# The coordinator is the SOLE journal writer per run (D13 / D40): it assembles the
# Committed entry from a worker's ReportCommit proposal and appends it.
kx-journal = { workspace = true }
kx-projection = { workspace = true }
kx-mote = { workspace = true }
kx-content = { workspace = true }
kx-warrant = { workspace = true }
# `sync` (mpsc + oneshot) is additive over the workspace tokio features: the async
# RPC handlers funnel commands to a single orchestration thread that owns the
# journal + projection + scheduler. The Projection holds a non-`Send` trait object
# (`Box<dyn TopologyMaterializer>`), so single-owner-thread + channel is how the
# coordinator keeps a `Send + Sync` gRPC service without a kx-projection refactor —
# and it makes the D40 sole-writer invariant structural (one thread owns the log).
tonic = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# OS entropy for the registered run-id nonce (M1.1, D64): a run identity must be
# unpredictable to serve as a cross-boundary idempotency-token root. Version 0.3
# is already in the lock graph (no new major added); `getrandom::fill` only.
getrandom = "0.3"

[dev-dependencies]
# `time` is additive over the workspace tokio features — the e2e tests use a short
# connect-retry sleep while the in-process server binds (the kx-proto pattern).
tokio = { workspace = true, features = ["time"] }
# Temp Sqlite file for the restart/recovery integration test + the on-disk bench.
tempfile = { workspace = true }
# Commit-path throughput benchmark (run with `cargo bench -p kx-coordinator`).
criterion = { workspace = true }
# Distributed scaling stress harness (`stress_distributed.rs`): real gRPC
# `WorkerClient`s commit over loopback TCP. Dev-only — `kx-worker` dev-depends on
# `kx-coordinator` in turn, which Cargo permits (dev-dependency cycles don't enter
# the build graph); neither crate production-depends on the other.
kx-worker = { workspace = true }

[[bench]]
name = "commit_throughput"
harness = false

[lints]
workspace = true
