[package]
name = "kx-coordinator"
version = "0.2.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "kortecx P2.2 coordinator service — hosts the P1 scheduler verbatim, owns the worker registry (behind a trait), and is the sole journal writer per run. Implements the kx-proto gRPC Coordinator service (the distribution control plane)."

[lib]
path = "src/lib.rs"

[dependencies]
# The gRPC schema + generated server/client + the tested proto<->domain
# conversions (identity re-derived Rust-side, D53).
kx-proto = { workspace = true }
# Hosted VERBATIM (P2 thesis test): registration routes through Scheduler::submit;
# placement is the kx-scheduler trait.
kx-scheduler = { workspace = true }
# The coordinator is the SOLE journal writer per run (D13 / D40): it assembles the
# Committed entry from a worker's ReportCommit proposal and appends it.
kx-journal = { workspace = true }
kx-projection = { workspace = true }
kx-mote = { workspace = true }
kx-content = { workspace = true }
kx-warrant = { workspace = true }
# M11/D115 cost-spend: the integer micro-USD price-book + the pure spend fold the
# coordinator uses to enforce the `cost_ceiling` warrant axis pre-stage (a leaf, no deps).
kx-pricing = { workspace = true }
# W1a (T-OBS1): the OFF-TRUTH-PATH audit sink. The serve coordinator emits the
# operator lifecycle (admitted / committed / failed) to an optional sink so the
# long-running `kx serve` has the durable operator audit trail the CLI already
# has. NOT the frozen trio + the dep-wall test (kx-audit/tests/boundary.rs) keeps
# the guarantee-path crates off this edge; record() is infallible (digest-inert).
kx-audit = { workspace = true }
# Resolve-at-submit (M1.2, D79): the coordinator resolves the warrant's
# tool_grants and captures the resolved versions as off-DAG run metadata. This
# is a NEW dep edge but does NOT touch the frozen trio
# (kx-scheduler/kx-executor/kx-inference) — the P2 thesis test holds.
kx-tool-registry = { workspace = true }
# PR-2d-1: the model-proposed tool-call AUTHORITY GATE (the ONE decode shared with
# the harness loop + the gateway fence) — the settle pass decodes a committed
# turn's output on the sole writer. A pure leaf (kx-mote/kx-warrant/serde only).
kx-toolcall = { workspace = true }
# Submission-refusal predicates at SubmitMote (M1.3): R-1/R-7/R-8/R-14/R-15 +
# R-10 + the D66 fail-closed-on-resolution-miss gate. A dependency-LIGHT leaf
# (kx-mote/kx-tool-registry/kx-warrant only) — deliberately NOT kx-executor, so
# the control-plane coordinator never links the inference/llama.cpp stack (the
# seam discipline: distribution is wiring, not a rewrite).
kx-refusal = { workspace = true }
# `sync` (mpsc + oneshot) is additive over the workspace tokio features: the async
# RPC handlers funnel commands to a single orchestration thread that owns the
# journal + projection + scheduler. The Projection holds a non-`Send` trait object
# (`Box<dyn TopologyMaterializer>`), so single-owner-thread + channel is how the
# coordinator keeps a `Send + Sync` gRPC service without a kx-projection refactor —
# and it makes the D40 sole-writer invariant structural (one thread owns the log).
tonic = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# PR-2d-2: decode the react SEED's free params at the seed-swap — a recipe-bound
# `Str`/`Int` arg arrives canonical-JSON-encoded (the kx-invoke binder contract),
# a directly-built seed carries raw bytes; the swap tries JSON first then raw
# (the gateway `prompt_from_config` precedent). Already in the lock graph.
serde_json = { workspace = true }
# OS entropy for the registered run-id nonce (M1.1, D64): a run identity must be
# unpredictable to serve as a cross-boundary idempotency-token root. Version 0.3
# is already in the lock graph (no new major added); `getrandom::fill` only.
getrandom = "0.3"

[dev-dependencies]
# `time` is additive over the workspace tokio features — the e2e tests use a short
# connect-retry sleep while the in-process server binds (the kx-proto pattern).
tokio = { workspace = true, features = ["time"] }
# Temp Sqlite file for the restart/recovery integration test + the on-disk bench.
tempfile = { workspace = true }
# Commit-path throughput benchmark (run with `cargo bench -p kx-coordinator`).
criterion = { workspace = true }
# Distributed scaling stress harness (`stress_distributed.rs`): real gRPC
# `WorkerClient`s commit over loopback TCP. Dev-only — `kx-worker` dev-depends on
# `kx-coordinator` in turn, which Cargo permits (dev-dependency cycles don't enter
# the build graph); neither crate production-depends on the other.
kx-worker = { workspace = true }

[[bench]]
name = "commit_throughput"
harness = false

[lints]
workspace = true
